[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pymol"
version = "0.1.0"
description = "PyMOL-RS: A modern Rust implementation of PyMOL molecular visualization"
readme = "../../README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "PyMOL-RS Contributors" }
]
keywords = ["pymol", "molecular", "visualization", "chemistry", "biology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
dev = ["pytest>=7.0", "numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/pymol-rs/pymol-rs"
Repository = "https://github.com/pymol-rs/pymol-rs"
Documentation = "https://pymol-rs.github.io/pymol-rs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pymol._pymol"
