[package]
name = "pymol-scene"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Scene management, camera, and window handling for PyMOL-RS"

[features]
default = ["windowing", "png-export", "parallel"]
windowing = ["dep:winit", "dep:pollster"]
png-export = ["dep:image"]
parallel = ["pymol-render/parallel"]

[dependencies]
# Internal crates
pymol-mol.workspace = true
pymol-render = { workspace = true, default-features = false }
pymol-select.workspace = true
pymol-color.workspace = true
pymol-settings.workspace = true
pymol-io.workspace = true

# External dependencies
lin_alg.workspace = true
wgpu.workspace = true
winit = { workspace = true, optional = true }
thiserror.workspace = true
log.workspace = true
ahash.workspace = true
bitflags.workspace = true
parking_lot.workspace = true
pollster = { version = "0.4", optional = true }
image = { workspace = true, optional = true }
serde = { workspace = true }
web-time = "1"